--- a/im-introduction.html
+++ b/im-introduction.html
@@ -18,7 +18,7 @@
 
     <!-- page 02 01 -->
     <section class="pg02_step01Sect">
-      <article class="container">
+      <article class="page_container">
         <h3 class="title_txt"><strong>線上詢問</strong></h3>
         <h4 class="title_txt">快速聯繫公司</h4>
         <p class="p_txt"><span>以前，須建好履歷後才能夠投遞，</span><span>還需等待公司查看與回覆</span></p>
@@ -33,7 +33,7 @@
 
     <!-- page 02 02 -->
     <section class="pg02_step02Sect">
-      <article class="container">
+      <article class="page_container">
         <h3 class="title_txt"><strong>即時通訊</strong></h3>
         <h4 class="title_txt">輕鬆找工作</h4>
         <p class="p_txt"><span>透過即時通訊聯繫公司，</span><span>不僅能儘早詢問細節，</span></p>
@@ -44,7 +44,7 @@
 
     <!-- 04 -->
     <section class="step04Sect">
-      <article class="container">
+      <article class="page_container">
         <h3 class="title_txt"><img src="./assets/img/simpleResume/img_1111app.png" alt="">把1111放進你的口袋</h3>
         <p class="p_txt">尋找幸福企業職缺、上萬個福利優、高年終、<br>高年薪工作的首選app已超過300萬人下載！</p>
         <div class="download_group">
@@ -69,7 +69,7 @@
 
     <!-- 05 -->
     <section class="step05Sect">
-      <article class="container">
+      <article class="page_container">
         <figure class="col_1">
           <img src="./assets/img/simpleResume/1-5-IphoneLeft.png" alt="" srcset="">
         </figure>
