--- a/simple_resume-introduction.html
+++ b/simple_resume-introduction.html
@@ -18,7 +18,7 @@
 
     <!-- 01 -->
     <section class="step01Sect">
-      <article class="container">
+      <article class="page_container">
         <h3 class="title_txt"><strong>3步驟</strong>快速建置履歷</h3>
         <p class="p_txt">原需填寫 33 個資料欄位<br>現在求職者只要需填 <strong>學歷背景</strong> 與 <strong>應徵條件</strong><br>僅 <strong class="color_blue">8</strong> 個資料欄位，就能馬上投遞 。</p>
         <img class="img" src="./assets/img/simpleResume/1-1-SimpleResume.png" alt="">
@@ -31,7 +31,7 @@
 
     <!-- 02 -->
     <section class="step02Sect">
-      <article class="container">
+      <article class="page_container">
         <h3 class="title_txt"><span>填寫<strong>應徵條件</strong></span><span>配對<strong>工作機會</strong></span></h3>
         <p class="p_txt"><span>分析百萬筆數據，</span><span>萃取最常使用到的 4 個資料欄位，</span><span>除了讓公司能快速篩選人才，</span><span>AI推薦機制也能介紹您最適合的職缺。</span></p>
         <div class="icon_content">
@@ -72,7 +72,7 @@
 
     <!-- 03 -->
     <section class="step03Sect">
-      <article class="container">
+      <article class="page_container">
         <h3 class="title_txt"><span>填寫<strong>學歷背景</strong></span><span>增加<strong>錄取機率</strong></span></h3>
         <p class="p_txt">學歷背景能向公司展現您的專業能力，<br>只要填寫 4 個資料欄位即可開始找工作。</p>
         <img class="img" src="./assets/img/simpleResume/1-3-SimpleEducation.png" alt="">
@@ -82,7 +82,7 @@
 
     <!-- 04 -->
     <section class="step04Sect">
-      <article class="container">
+      <article class="page_container">
         <h3 class="title_txt"><img src="./assets/img/simpleResume/img_1111app.png" alt="">把1111放進你的口袋</h3>
         <p class="p_txt">尋找幸福企業職缺、上萬個福利優、高年終、<br>高年薪工作的首選app已超過300萬人下載！</p>
         <div class="download_group">
@@ -107,7 +107,7 @@
     
     <!-- 05 -->
     <section class="step05Sect">
-      <article class="container">
+      <article class="page_container">
         <figure class="col_1">
           <img src="./assets/img/simpleResume/1-5-IphoneLeft.png" alt="" srcset="">
         </figure>
