202030711-移除系統工具列

--- a/im-introduction.html
+++ b/im-introduction.html
@@ -82,9 +82,9 @@
         </figure>
       </article>
     </section>
-    <footer>
+    <!-- <footer>
       <img src="./assets/img/simpleResume/footer.jpg" alt="">
-    </footer>
+    </footer> -->
   </main>
   
 </body>
