--- a/simple_resume-introduction.html
+++ b/simple_resume-introduction.html
@@ -120,9 +120,9 @@
         </figure>
       </article>
     </section>
-    <footer>
+    <!-- <footer>
       <img src="./assets/img/simpleResume/footer.jpg" alt="">
-    </footer>
+    </footer> -->
   </main>
   
 </body>
